# Adaptive-AUTOSAR-2024

./: README.md  machine_manifest.json
Execution_Management/: CMakeLists.txt
Execution_Management/ExecutionClientProcess/: .cproject  .project
Execution_Management/ExecutionClientProcess/include/: ExecutionClient.h  PipeInput.h
Execution_Management/ExecutionClientProcess/src/: ExecutionClient.cpp  ExecutionClientProcess.cpp  PipeInput.cpp
Execution_Management/ExecutionManager/: .cproject  .project
Execution_Management/ExecutionManager/.metadata/: version.ini
Execution_Management/ExecutionManager/.metadata/.plugins/org.eclipse.core.resources/.projects/.org.eclipse.egit.core.cmp/: .location
Execution_Management/ExecutionManager/.metadata/.plugins/org.eclipse.core.resources/.root/: 4.tree
Execution_Management/ExecutionManager/.metadata/.plugins/org.eclipse.core.resources/.safetable/: org.eclipse.core.resources
Execution_Management/ExecutionManager/.metadata/.plugins/org.eclipse.e4.workbench/: workbench.xmi
Execution_Management/ExecutionManager/.metadata/.plugins/org.eclipse.ui.ide/: dialog_settings.xml
Execution_Management/ExecutionManager/.metadata/.plugins/org.eclipse.ui.workbench/: workingsets.xml
Execution_Management/ExecutionManager/include/: ExecutionClient.h  ExecutionManager.h  ExecutionManifest.h  FunctionGroup.h  GetStateResponse.h  MachineManifest.h  Pipe.h  PipeInput.h  PipeOutput.h  StartupConfiguration.h  StateClientImpl.h  StateRequest.h  StateStartupConfiguration.h
Execution_Management/ExecutionManager/src/: ExecutionClient.cpp  ExecutionManager.cpp  ExecutionManifest.cpp  FunctionGroup.cpp  FunctionGroupState.cpp  MachineManifest.cpp  Pipe.cpp  PipeInput.cpp  PipeOutput.cpp  StartupConfiguration.cpp  StateClient.cpp  StateClientImpl.cpp  StateStartupConfiguration.cpp  main.cpp
Execution_Management/StateClientProcess/: .cproject  .project
Execution_Management/StateClientProcess/include/: FunctionGroup.h  GetStateResponse.h  PipeOutput.h  state_client.h
Execution_Management/StateClientProcess/src/: ExecutionClient.cpp  FunctionGroup.cpp  PipeInput.cpp  PipeOutput.cpp  StateClientImpl.cpp  StateClientProcess.cpp  state_client.cpp
SW_packages/ExecutionClientProcess/: ExecutionClientProcess  execution_manifest.json
SW_packages/SMProcess/: StateClientProcess  execution_manifest.json  state_manager
SiemensProject (aracom SM finalized)/SiemensProject/: CMakeLists.txt  main_process.cpp  main_proxy.cpp  main_skeleton.cpp
State_Management/: CMakeLists.txt  CalibrationData.json
State_Management/inc/: CalibirationData.hpp  EmFacade.hpp  ExecutionClient.h  FunctionGroup.h  FunctionGroupState.h  GroupsAndStates.hpp  MachineManifest.h  PipeInput.h  PipeOutput.h  RequestResultEvaluation.hpp  ShutdownHandler.hpp  StateClientImpl.h  StateManager.hpp  StateRequest.h  StateRequestBuffer.hpp  StateRequestProcessor.hpp  StateResponse.h  execution_error_event.h  instance_id.h  instance_specifier.h  other.hpp  result.h  triggers.hpp
State_Management/src/: CalibrationData.cpp  EmFacade.cpp  ExecutionClient.cpp  FunctionGroup.cpp  FunctionGroupState.cpp  GroupsAndStates.cpp  MachineManifest.cpp  PipeInput.cpp  PipeOutput.cpp  RequestResultEvaluation.cpp  SM.code-workspace  ShutdownHandler.cpp  StateClientImpl.cpp  StateManager.cpp  StateRequestBuffer.cpp  StateRequestProcessor.cpp  error_code.cpp  instance_id.cpp  instance_specifier.cpp  main.cpp  state_client.cpp  triggers.cpp
